# bosun

./: .gitignore  AGENTS.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  STYLE.md  VISION.md  bosun.example.toml  bosun.toml
.github/workflows/: claude.yml  rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  error.rs  main.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: error.rs  lib.rs  protocol.rs  server.rs
crates/policy/: Cargo.toml
crates/policy/src/: capability.rs  error.rs  lib.rs  policy.rs
crates/runtime/: Cargo.toml
crates/runtime/examples/: test_mcp.rs
crates/runtime/src/: error.rs  lib.rs  llm.rs  mcp.rs  session.rs  tools.rs
crates/runtime/src/backend/: anthropic.rs  claude_cli.rs  mod.rs
crates/runtime/src/llm/: errors.rs  mod.rs  types.rs
crates/runtime/src/model/: errors.rs  mod.rs  types.rs
crates/runtime/src/model/backend/: anthropic.rs  mod.rs
crates/runtime/src/providers/: anthropic.rs  mod.rs
crates/runtime/src/tools/: empty.rs  errors.rs  host.rs  mcp_host.rs  mod.rs  trait.rs  types.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  event.rs  lib.rs  store.rs
docs/: ARCHITECTURE.md  PROJECT.md  STYLE.md
scratch/: 2026-02-04-10-craft-notes.md  2026-02-04-12-craft-notes.md  2026-02-04-13-craft-notes.md  2026-02-04-14-craft-notes.md  2026-02-04-16-craft-notes.md  2026-02-04-17-craft-notes.md  2026-02-04-20-craft-notes.md  2026-02-04-22-craft-notes.md  2026-02-04-23-craft-notes.md  2026-02-05-05-craft-notes.md  2026-02-05-06-craft-notes.md  2026-02-05-07-craft-notes.md  2026-02-05-11-craft-notes.md  2026-02-05-12-craft-notes.md  2026-02-05-13-craft-notes.md  2026-02-05-14-craft-notes.md  2026-02-05-15-craft-notes.md  2026-02-05-16-craft-notes.md  README.md
scripts/: export-codebase.sh  export-docs.sh  pr.sh
