[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/AustinEral/bosun"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9.8"

# MCP SDK
rmcp = { version = "0.14", features = ["client", "transport-child-process"] }
