[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bosun"
path = "src/main.rs"

[dependencies]
runtime = { path = "../runtime" }
storage = { path = "../storage" }
policy = { path = "../policy" }
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
chrono.workspace = true
