[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mcp = { path = "../mcp" }
policy = { path = "../policy" }
storage = { path = "../storage" }
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
