[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
policy = { path = "../policy" }
storage = { path = "../storage" }
async-trait = "0.1"
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
